--- a/BowandArrow/app/src/main/res/values/strings.xml
+++ b/BowandArrow/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_home">EditHomeActivity</string>
     <string name="title_activity_create_home">CreateHomeActivity</string>
+    <string name="title_activity_view_home">View Home</string>
 </resources>
